# blelora-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/actions/: action.yml
.github/workflows/: release-build.yml
install/: blelora.json
src/: lib.rs  main.rs
src/cmd/: mod.rs
src/cmd/dfu/: mod.rs  serial.rs  touch.rs
