[package]
name = "blelora"
version = "0.1.0"
edition = "2018"
authors = ["Kent Williams"]
license-file = "LICENSE"
keywords = ["nrf", "dfu", "nordic"]
description = "A command-line utility written in Rust that supports Device Firmware Updates (DFU) for devices running Adafruit_nRF52_Bootloader."
repository = "https://github.com/blelora/blelora-cli"

[[bin]]
name = "blelora"
path = "src/main.rs"
doc = false

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
structopt = "0.3.23"
anyhow = "1.0.44"
serialport = { git = "https://gitlab.com/spookyvision1/serialport-rs.git", branch = "fix-usb-deprecation" }
bytes = "1.1.0"
futures = "0.3.17"
zip = "0.5.13"
serde_json = "1.0"
snailquote = "0.3.0"
log = "0.4.14"
env_logger = "0.9.0"
indicatif = "0.16.2"
reqwest = "0.11.7"

[dependencies.tokio-util]
version = "0.6"
features = ["codec"]